<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#21508C"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/todo"
            android:scaleX="1.3"
            android:scaleY="2"
            android:src="@drawable/backwave"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/text_view_out_of"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="148dp"
            android:text="@string/out_of_text"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.507"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="286dp"
            android:layout_height="233dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="#D6F4FF"
            android:contextClickable="false"
            android:elevation="12dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"


            app:layout_constraintTop_toBottomOf="@+id/text_view_out_of">

            <TextView
                android:id="@+id/question_textview"
                android:layout_width="240dp"
                android:layout_height="120dp"
                android:layout_gravity="center|top"
                android:padding="@dimen/question_text_padding"
                android:text="@string/placeholder"
                android:textColor="@color/color_questioncard"
                android:textColorLink="#073673"
                android:textStyle="normal" />

        </androidx.cardview.widget.CardView>


        <Button
            android:id="@+id/button_answer"
            android:layout_width="178dp"
            android:layout_height="61dp"
            android:layout_marginBottom="32dp"
            android:backgroundTint="#D6F4FF"
            android:text="@string/answer"
            android:textColor="#3F51B5"
            app:cornerRadius="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_marginBaseline="@dimen/button_margin" />

        <Button
            android:id="@+id/button_next"
            android:layout_width="59dp"
            android:layout_height="61dp"


            android:layout_marginStart="328dp"
            android:layout_marginTop="638dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="32dp"
            android:autoSizeMaxTextSize="20dp"
            android:backgroundTint="@color/common_google_signin_btn_tint"
            android:drawableLeft="@drawable/iconbuttonright"
            android:textColor="#3F51B5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/imageView" />

        <Button
            android:id="@+id/button_prev"
            android:layout_width="59dp"
            android:layout_height="61dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="638dp"
            android:layout_marginEnd="328dp"
            android:layout_marginBottom="32dp"
            android:autoSizeMaxTextSize="20dp"
            android:backgroundTint="@color/common_google_signin_btn_tint"
            android:drawableLeft="@drawable/iconbuttonleft"
            android:textColor="#3F51B5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView" />

        <TextView
            android:id="@+id/Score"
            style="@style/Score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ScoreValue"
            android:textSize="34sp"
            app:layout_constraintBottom_toTopOf="@+id/text_view_out_of"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.572" />

        <Button
            android:id="@+id/button0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:text="0"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/button_answer"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="1/2"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/button_answer"
            app:layout_constraintEnd_toStartOf="@+id/button_false"
            app:layout_constraintHorizontal_bias="0.51"
            app:layout_constraintStart_toEndOf="@+id/button0" />

        <Button
            android:id="@+id/button_false"
            style="@style/ButtonStyle"
            android:layout_width="82dp"
            android:layout_height="0dp"
            android:layout_marginBottom="64dp"
            android:text="1"
            android:textColor="#1976D2"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/button_answer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.951"
            app:layout_constraintStart_toStartOf="parent" />

<!--        test!!    -->

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>